--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -413,6 +413,25 @@ button.restart {
     height: 40px;
 }
 
+/*Main section of help page*/
+
+#help-area {
+    width: 100%;
+    height: 700px;
+    overflow: hidden;
+}
+
+#help-box {
+    width: 600px;
+    color: #F8E9E9;
+    background-color: #69995D;
+    border-radius: 5px;
+    text-align: center;
+
+    /*reverse the top of quiz-box above*/
+    top: 58%;
+}
+
 /*Footer*/
 
 footer {
