--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@ body {
     font-family: Montserrat, sans-serif;
     font-weight: 400;
     color: #394648;
+    background: url('../images/background_image.jpg') no-repeat center center;
+    background-size: cover;
 }
 
 /*Header*/
