Change color of help box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,8 +426,8 @@ button.restart {
 
 #help-box {
     width: 600px;
-    color: #F8E9E9;
-    background-color: #69995D;
+    color: #394648;
+    background-color: #F8E9E9;
     border-radius: 5px;
     text-align: center;
 
