--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,8 @@ h2 {
     overflow: hidden;
 }
 
-#main_page,
+.text,
+.start_btn,
 .rules_box,
 #quiz_box,
 #feedback_box,
@@ -92,13 +93,13 @@ h2 {
     transform: translate(-50%, -50%);
 
     /*Help from Youtube Tutorial*/
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0,.2)
-                0 6px 20px 0 rgba(0, 0, 0, 0.19)
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0,.2),
+                0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 /*Make the box appear when the start button is pressed (Help from Youtube Tutorial)*/
 
-.rules_box.activeRule {
+.rules_box.active_rule {
     z-index: 5;
     opacity: 1;
     pointer-events: auto;
@@ -181,6 +182,7 @@ h2 {
     height: 40px;
     width: 90px;
     margin: 0 5px;
+    outline: none;
     font-size: 16px;
     font-weight: 500;
     cursor: pointer;
