Fix some errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,7 +290,7 @@ button.restart {
     border: 1px solid #69995D;
 }
 
-.questions {
+.quiz_questions {
     padding: 25px 30px 20px 30px;
     background: #F8E9E9;
 }
