--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ h2 {
 .text,
 .start_btn,
 .rules_box,
-#quiz_box,
+.quiz_box,
 #feedback_box,
 #help_box {
     position: absolute;
@@ -99,7 +99,8 @@ h2 {
 
 /*Make the box appear when the start button is pressed (Help from Youtube Tutorial)*/
 
-.rules_box.active_rule {
+.rules_box.activeRule,
+.quiz_box.activeQuiz {
     z-index: 5;
     opacity: 1;
     pointer-events: auto;
@@ -213,20 +214,23 @@ button.restart {
 
 /*Main section of Quiz page*/
 
-#quiz_area {
+.quiz_area {
     width: 100%;
     height: 700px;
     overflow: hidden;
 }
 
-#quiz_box {
+.quiz_box {
     width: 600px;
     color: #394648;
     background-color: #F8E9E9;
     border-radius: 5px;
 
     /*reverse the top of quiz-box above*/
-    top: 58%;
+    /*top: 58%;*/
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
 }
 
 .quiz_top {
