--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,12 +214,6 @@ button.restart {
 
 /*Main section of Quiz page*/
 
-.quiz_area {
-    width: 100%;
-    height: 700px;
-    overflow: hidden;
-}
-
 .quiz_box {
     width: 600px;
     color: #394648;
@@ -227,7 +221,7 @@ button.restart {
     border-radius: 5px;
 
     /*reverse the top of quiz-box above*/
-    /*top: 58%;*/
+    top: 58%;
     opacity: 0;
     pointer-events: none;
     transform: translate(-50%, -50%) scale(0.9);
