Get and Style user correct and incorrect answers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,15 +342,27 @@ button.restart {
 .icon_tick {
     color: #69995D;
     background-color: #bfd4b9;
-    border: #69995D;
+    border-color: #69995D;
     border-radius: 100%;
 }
 
 .icon_cross {
     color: red;
     background-color: rgba(236, 204, 204, 0.986);
-    border: red;
+    border-color: red;
     border-radius: 100%;
+}
+
+.option.correct {
+    color: #69995D;
+    background-color: #bfd4b9;
+    border-color: #69995D;
+}
+
+.option.incorrect {
+    color: red;
+    background-color: rgba(236, 204, 204, 0.986);
+    border-color: red;
 }
 
 /*Next and Restart button*/
