--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,6 @@ h2 {
     overflow: hidden;
 }
 
-.text,
 .start_btn,
 .rules_box,
 .quiz_box,
@@ -105,6 +104,14 @@ h2 {
     opacity: 1;
     pointer-events: auto;
     transform: translate(-50%, -50%) scale(1);
+}
+
+/*Position the text*/
+.text {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /*Style start quiz button */
