--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,8 @@ nav {
     color: #394648;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    text-align: center;
 }
 
 h1,
@@ -92,18 +94,24 @@ h2 {
 }
 
 @media (max-width: 800px) {
+
     #menu {
-        height: 100vh;
-        position: fixed;
-        top: 0;
-        right: 0;
-        left: 0;
-        z-index: 10;
-        flex-direction: column;
-        align-items: center;
-        background: #F8E9E9;
-        transition: top 1s ease;
         display: none;
+        width: 100%;
+        flex-direction: column;
+    }
+
+    #menu li {
+        margin: 0 0 15px 0;
+    }
+
+    #menu.show {
+        display: flex;
+    }
+
+    #header {
+        height: 160px;
+        margin-bottom: 0;
     }
 
     #openMenu {
